--- a/code/feature_extraction_seq.ipynb
+++ b/code/feature_extraction_seq.ipynb
@@ -12,6 +12,32 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Input:\n",
+    "  * ./data/ICD9CODES.p (pickle file of all ICD9 codes)\n",
+    "  * ./data/ICD9CODES_TOP10.p (pickle file of top 10 ICD9 codes)\n",
+    "  * ./data/ICD9CODES_TOP50.p (pickle file of top 50 ICD9 codes)\n",
+    "  * ./data/ICD9CAT_TOP10.p (pickle file of top 10 ICD9 categories)\n",
+    "  * ./data/ICD9CAT_TOP50.p (pickle file of top 50 ICD9 categories)\n",
+    "  * ./data/TRAIN-VAL-TEST-HADMID.p (pickle file of train-val-test sets. each set contains a list of hadm_id)\n",
+    "  * ./data/DATA_HADM.csv (contains top 50 icd9code, top 50 icd9cat, and clinical text for each admission, source for seqv0)\n",
+    "  * ./data/DATA_HADM_CLEANED.csv (contains top 50 icd9code, top 50 icd9cat, and cleaned clinical text w/out stopwords for each admission, source for seqv1)\n",
+    "  * ./data/model_word2vec_v2_*dim.txt (our custom word2vec model)\n",
+    "  * ./data/bio_nlp_vec/PubMed-shuffle-win-*.txt (pre-trained bionlp word2vec model. convert from .bin to .txt using gensim)\n",
+    "* Output:\n",
+    "  * ./data/DATA_WORDSEQV[0/1]_HADM_TOP[10/10CAT/50/50CAT].p (pickle file of train-val-test data and label)\n",
+    "  * ./data/DATA_WORDSEQV[0/1]_WORDINDEX.p (pickle of file of word sequence index)\n",
+    "* Description: \n",
+    "  * All sequential feature extraction tried in the paper.\n",
+    "  * WORDSEQV0 = seqv0 in the paper\n",
+    "  * WORDSEQV1 = seqv1 in the paper\n",
+    "  * word2vec_*dim = custom word2vec with * features in the paper\n",
+    "  * PubMed-shuffle-win-*.txt = pre trained word2vec in the paper (bio*)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
